A lot of additions: unstable state

--- a/.gitignore
+++ b/.gitignore
@@ -35,48 +35,5 @@ test.hv
 *.exe
 *.out
 *.app
-/.idea/.gitignore
-/cmake-build-debug/.ninja_deps
-/cmake-build-debug/.ninja_log
-/cmake-build-debug/build.ninja
-/cmake-build-debug/.cmake/api/v1/query/cache-v2
-/cmake-build-debug/.cmake/api/v1/reply/cache-v2-3798f0b82b4deb688a5e.json
-/cmake-build-debug/CMakeFiles/clion-Debug-log.txt
-/cmake-build-debug/CMakeFiles/clion-environment.txt
-/cmake-build-debug/CMakeFiles/cmake.check_cache
-/cmake-build-debug/cmake_install.cmake
-/cmake-build-debug/CMakeCache.txt
-/cmake-build-debug/CMakeFiles/3.28.1/CMakeCCompiler.cmake
-/cmake-build-debug/CMakeFiles/3.28.1/CompilerIdC/CMakeCCompilerId.c
-/cmake-build-debug/CMakeFiles/CMakeConfigureLog.yaml
-/cmake-build-debug/CMakeFiles/3.28.1/CMakeCXXCompiler.cmake
-/cmake-build-debug/CMakeFiles/3.28.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
-/cmake-build-debug/CMakeFiles/3.28.1/CMakeDetermineCompilerABI_C.bin
-/cmake-build-debug/CMakeFiles/3.28.1/CMakeDetermineCompilerABI_CXX.bin
-/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
-/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-0450a5fbb3958544cfce.json
-/cmake-build-debug/CMakeFiles/3.28.1/CMakeSystem.cmake
-/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
-/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-216898e2e026094494ad.json
-/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
-/.idea/editor.xml
-/src/parser/helpers.cpp
-/cmake-build-debug/HSharpVE
-/.idea/HSharpVE.iml
-/cmake-build-debug/hve_ng
-/cmake-build-debug/hve_ng-debug
-/cmake-build-debug/.cmake/api/v1/reply/index-2024-05-05T09-50-37-0659.json
-/cmake-build-debug/Testing/Temporary/LastTest.log
-/.idea/misc.xml
-/.idea/modules.xml
-/src/parser/parser.cpp
-/cmake-build-debug/CMakeFiles/rules.ninja
-/cmake-build-debug/.cmake/api/v1/reply/target-hve_ng-Debug-c45c8ef355bfd1aca667.json
-/cmake-build-debug/.cmake/api/v1/reply/target-hve_ng-debug-Debug-7d3e7197cf4fee8ef360.json
-/cmake-build-debug/CMakeFiles/TargetDirectories.txt
-/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
-/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-3a45e23eeb554008254f.json
-/.idea/vcs.xml
-/include/ve/ve.hpp
-/src/ve/ve_functions.cpp
-/src/ve/ve_main.cpp
+.idea
+cmake-build-debug
