--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ set(ALL_SRCS
         src/parser/parser.cpp
         src/parser/tokenizer.cpp
         src/ve/ve_main.cpp
-        src/ve/exceptions.cpp)
+        src/ve/exceptions.cpp
+        src/ve/stdlib.cpp)
 #Debug target
 add_executable(hve_ng-debug ${ALL_SRCS})
-set_target_properties(hve_ng-debug PROPERTIES COMPILE_FLAGS "-Wall -O0 -ggdb3")
+set_target_properties(hve_ng-debug PROPERTIES COMPILE_FLAGS "-Wall -O0 -ggdb3 -fsanitize=leak")
 #Release target
-add_executable(hve_ng ${ALL_SRCS}
-        src/main/main.cpp
-        src/ve/exceptions.cpp)
-set_target_properties(hve_ng PROPERTIES COMPILE_FLAGS "-Wall -O2 -fdata-sections -ffunction-sections -Wl,--gc-sections")
+add_executable(hve_ng-release ${ALL_SRCS})
+set_target_properties(hve_ng-release PROPERTIES COMPILE_FLAGS "-Wall -O2 -fdata-sections -ffunction-sections -Wl,--gc-sections")
+add_custom_command(TARGET hve_ng-release COMMAND POST_BUILD strip -s hve_ng-release)
