--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ project(HSharpVE LANGUAGES CXX C VERSION 0.0)
 set(MAIN_SRC
     src/main/main.cpp
     src/main/string_split.cpp
+    src/main/arguments_handler.cpp
 PARENT_SCOPE)
 
 set(PARSER_SRC parser/helpers.cpp)
